--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   flutter_launcher_icons: ^0.13.1
+  scaler: ^1.1.2+1
 
 dev_dependencies:
   flutter_test:
