--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   provider: ^6.0.5
   flutter_launcher_icons: ^0.13.1
   scaler: ^1.1.2+1
+  flutter_svg: ^2.0.9
+  dio: ^5.3.3
+  shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
+  flutter_dotenv: ^5.1.0
+  url_launcher: ^6.2.1
+  package_info_plus: ^4.2.0
 
 dev_dependencies:
   flutter_test:
