--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.sprit"
+    namespace "com.ikjunchoi.sprit"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
