--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,28 @@
                 <data android:scheme="kakao099c80120a9837d538996a3ccb5ed239" android:host="oauth"/>
             </intent-filter>
         </activity>
+        <!-- 카카오톡 공유, 카카오톡 메시지 커스텀 URL 스킴 설정 -->
+    <activity
+        android:name=".MainActivity"
+        android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+        android:exported="true"
+        android:hardwareAccelerated="true"
+        android:launchMode="singleTop"
+        android:theme="@style/LaunchTheme"
+        android:windowSoftInputMode="adjustResize">
+        <!-- 생략 -->
+
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+
+            <!-- "kakao${YOUR_NATIVE_APP_KEY}://${PRODUCT_NAME}" 형식의 앱 실행 스킴 설정 -->
+            <!-- 카카오톡 공유, 카카오톡 메시지 -->
+            <data android:host="kakaolink"
+                android:scheme="kakao099c80120a9837d538996a3ccb5ed239" />
+        </intent-filter>
+    </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
