--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   package_info_plus: ^4.2.0
   kakao_flutter_sdk_user: ^1.7.0
   kakao_flutter_sdk_talk: ^1.7.0
+  sign_in_with_apple: ^5.0.0
 
 dev_dependencies:
   flutter_test:
