--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,27 +35,6 @@
             </intent-filter>
         </activity>
         <!-- 카카오톡 공유, 카카오톡 메시지 커스텀 URL 스킴 설정 -->
-    <activity
-        android:name=".MainActivity"
-        android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-        android:exported="true"
-        android:hardwareAccelerated="true"
-        android:launchMode="singleTop"
-        android:theme="@style/LaunchTheme"
-        android:windowSoftInputMode="adjustResize">
-        <!-- 생략 -->
-
-        <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
-
-            <!-- "kakao${YOUR_NATIVE_APP_KEY}://${PRODUCT_NAME}" 형식의 앱 실행 스킴 설정 -->
-            <!-- 카카오톡 공유, 카카오톡 메시지 -->
-            <data android:host="kakaolink"
-                android:scheme="kakao099c80120a9837d538996a3ccb5ed239" />
-        </intent-filter>
-    </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -75,6 +54,28 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- "kakao${YOUR_NATIVE_APP_KEY}://${PRODUCT_NAME}" 형식의 앱 실행 스킴 설정 -->
+                <!-- 카카오톡 공유, 카카오톡 메시지 -->
+                <data android:host="kakaolink"
+                    android:scheme="kakao099c80120a9837d538996a3ccb5ed239" />
+            </intent-filter>
+        </activity>
+        <!-- Set up the Sign in with Apple activity, such that it's callable from the browser-redirect -->
+        <activity
+            android:name="com.aboutyou.dart_packages.sign_in_with_apple.SignInWithAppleCallback"
+            android:exported="true"
+        >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="signinwithapple" />
+                <data android:path="callback" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
