--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   kakao_flutter_sdk_user: ^1.7.0
   kakao_flutter_sdk_talk: ^1.7.0
   sign_in_with_apple: ^5.0.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
