--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   sign_in_with_apple: ^5.0.0
   carousel_slider: ^4.2.1
   marquee: ^2.2.3
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
