--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   carousel_slider: ^4.2.1
   marquee: ^2.2.3
   flutter_switch: ^0.3.2
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
