--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,22 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
+  provider: ^6.1.1
   flutter_launcher_icons: ^0.13.1
   scaler: ^1.1.2+1
   flutter_svg: ^2.0.9
-  dio: ^5.3.3
+  dio: ^5.4.0
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
   flutter_dotenv: ^5.1.0
-  url_launcher: ^6.2.1
+  url_launcher: ^6.2.3
   package_info_plus: ^4.2.0
-  kakao_flutter_sdk_user: ^1.7.0
-  kakao_flutter_sdk_talk: ^1.7.0
+  kakao_flutter_sdk_user: ^1.8.0
+  kakao_flutter_sdk_talk: ^1.8.0
   sign_in_with_apple: ^5.0.0
   carousel_slider: ^4.2.1
   marquee: ^2.2.3
   flutter_switch: ^0.3.2
+  firebase_messaging: ^14.7.10
   firebase_core: ^2.24.2
 
 dev_dependencies:
@@ -61,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
