--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   firebase_core: ^2.24.2
   flutter_local_notifications: ^16.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
