--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_core: ^2.24.2
   flutter_local_notifications: ^16.3.0
   intl: ^0.19.0
+  barcode_scan2: ^4.3.0
 
 dev_dependencies:
   flutter_test:
