--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_local_notifications: ^16.3.0
   intl: ^0.19.0
   barcode_scan2: ^4.3.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
