--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   intl: ^0.19.0
   barcode_scan2: ^4.3.0
   dropdown_button2: ^2.3.9
+  screenshot: ^2.1.0
+  path_provider: ^2.1.2
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
