--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   screenshot: ^2.1.0
   path_provider: ^2.1.2
   share_plus: ^7.2.1
+  amplitude_flutter: ^3.16.1
 
 dev_dependencies:
   flutter_test:
