--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   share_plus: ^7.2.1
   amplitude_flutter: ^3.16.1
   google_mobile_ads: ^4.0.0
+  flutter_swipe_detector: ^2.0.0
 
 dev_dependencies:
   flutter_test:
