--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -280,6 +280,6 @@
     </dict>
   </array>
   <key>NSUserTrackingUsageDescription</key>
-  <string>사용자 맞춤 광고를 표시하기 위해 사용자의 광고 활동 정보를 수집합니다.dd</string>
+  <string>사용자 맞춤 광고를 표시하기 위해 사용자의 광고 활동 정보를 수집합니다.</string>
 </dict>
 </plist>
