--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -281,5 +281,9 @@
   </array>
   <key>NSUserTrackingUsageDescription</key>
   <string>사용자 맞춤 광고를 표시하기 위해 사용자의 광고 활동 정보를 수집합니다.</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>프로필 이미지 선택을 위해 사진 접근 권한이 필요합니다.</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>카메라 사용을 위해 마이크 접근 권한이 필요합니다.</string>
 </dict>
 </plist>
