--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   google_mobile_ads: ^4.0.0
   flutter_swipe_detector: ^2.0.0
   app_tracking_transparency: ^2.0.4
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
