--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_swipe_detector: ^2.0.0
   app_tracking_transparency: ^2.0.4
   image_picker: ^1.1.2
+  shimmer: ^3.0.0
 
 dependency_overrides:
   fading_edge_scrollview: ^4.1.1
