--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   image_picker: ^1.1.2
   shimmer: ^3.0.0
   carousel_slider: ^5.0.0
+  scrolls_to_top: any
 
 dependency_overrides:
   fading_edge_scrollview: ^4.1.1
