--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,6 +60,8 @@
 	<string>프로필 이미지 선택을 위해 사진 접근 권한이 필요합니다.</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>사용자 맞춤 광고를 표시하기 위해 사용자의 광고 활동 정보를 수집합니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>지도 연동을 위해 위치 접근이 필요합니다.</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
