--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,16 +55,16 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>바코드 검색을 위해 카메라 사용 권한이 필요합니다.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>앱 사용 중 및 필요한 경우 정확한 위치로 주변 독서 스팟을 안내하기 위해 위치 접근이 필요합니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>주변 독서 스팟을 찾고 지도를 표시하기 위해 현재 위치가 필요합니다.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>카메라 사용을 위해 마이크 접근 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>프로필 이미지 선택을 위해 사진 접근 권한이 필요합니다.</string>
 	<key>NSUserTrackingUsageDescription</key>
-	<string>사용자 맞춤 광고를 표시하기 위해 사용자의 광고 활동 정보를 수집합니다.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>주변 독서 스팟을 찾고 지도를 표시하기 위해 현재 위치가 필요합니다.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>앱 사용 중 및 필요한 경우 정확한 위치로 주변 독서 스팟을 안내하기 위해 위치 접근이 필요합니다.</string>
+	<string>맞춤형 광고 및 분석 제공을 위해 기기 식별자를 사용할 수 있습니다.</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
@@ -272,7 +272,7 @@
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen.storyboard</string>
+	<string>Main.storyboard</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
@@ -285,6 +285,14 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+	</array>
+	<!-- 로컬 네트워크 권한 안내 문구 -->
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Allow Flutter tools on your computer to connect and debug your application. This prompt will not appear on release builds.</string>
+	<!-- mDNS 서비스(디버그용) -->
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_dartVmService._tcp</string>
 	</array>
 </dict>
 </plist>
